--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "JavaScript Functions Lab - Story-based exercises to master function declarations, arrow functions, closures, HOF, recursion, composition, and more",
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
-    "test:win": "set NODE_OPTIONS=--experimental-vm-modules&& jest",
-    "test:win:watch": "set NODE_OPTIONS=--experimental-vm-modules&& jest --watchAll"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watchAll"
   },
-  "keywords": ["javascript", "functions", "lab", "education"],
+  "keywords": [
+    "javascript",
+    "functions",
+    "lab",
+    "education"
+  ],
   "license": "MIT",
   "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "cross-env": "^10.1.0"
   }
 }
